--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,7 +37,6 @@ jobs:
         run: npm ci
       - run: bundle exec rubocop -P
         name: Lint Ruby files
-      - run: npm run stylelint
+      - run: npm stylelint
         name: Lint SCSS files
-      - run: bundle exec rubocop -P
-        name: Lint Ruby files
+
