--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,6 +37,6 @@ jobs:
         run: npm ci
       - run: bundle exec rubocop -P
         name: Lint Ruby files
-      - run: npm stylelint
+      - run: npm run stylelint
         name: Lint SCSS files
 
