--- a/.github/workflows/ci_decidim_privacy.yml
+++ b/.github/workflows/ci_decidim_privacy.yml
@@ -1,5 +1,11 @@
 name: "[CI] Privacy"
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - develop
+      - main
+      - release/*
+  pull_request:
 
 env:
   CI: "true"
