--- a/.github/workflows/ci_decidim_privacy.yml
+++ b/.github/workflows/ci_decidim_privacy.yml
@@ -36,23 +36,4 @@ jobs:
       DATABASE_PASSWORD: postgres
       DATABASE_HOST: localhost
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 1
-      - uses: ruby/setup-ruby@v1
-        with:
-          bundler-cache: true
-      - run: bundle exec rake test_app
-        name: Create test app
-      - run: mkdir -p ./spec/decidim_dummy_app/tmp/screenshots
-        name: Create the screenshots folder
-      - uses: nanasess/setup-chromedriver@v2
-      - run: bundle exec rspec
-        name: RSpec
-      - uses: codecov/codecov-action@v3
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: screenshots
-          path: ./spec/decidim_dummy_app/tmp/screenshots
-          if-no-files-found: ignore
+      uses: mainio/gha-decidim-module/actions/ci_rspec.yml@main
