--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,6 +22,6 @@ jobs:
     if: "!startsWith(github.head_ref, 'chore/l10n')"
     timeout-minutes: 60
     steps:
-      - uses: mainio/gha-decidim-module/actions/lint.yml@main
+      - uses: mainio/gha-decidim-module/lint@main
         with:
           stylelint: true
