--- a/.github/workflows/ci_decidim_privacy.yml
+++ b/.github/workflows/ci_decidim_privacy.yml
@@ -7,33 +7,17 @@ on:
       - release/*
   pull_request:
 
-env:
-  CI: "true"
-  CODECOV: "true"
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
 jobs:
+  build_app:
+    name: Build test application
+    uses: mainio/gha-decidim-module/.github/workflows/build_app.yml@main
+    secrets: inherit
   main:
+    needs: build_app
     name: Tests
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    services:
-      postgres:
-        image: postgres:11
-        ports: ["5432:5432"]
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        env:
-          POSTGRES_PASSWORD: postgres
-    env:
-      DATABASE_USERNAME: postgres
-      DATABASE_PASSWORD: postgres
-      DATABASE_HOST: localhost
-    steps:
-      - uses: mainio/gha-decidim-module/ci_rspec@main
+    uses: mainio/gha-decidim-module/.github/workflows/ci_rspec.yml@main
+    secrets: inherit
