--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,10 +7,6 @@ on:
       - release/*
   pull_request:
 
-env:
-  CI: "true"
-  SIMPLECOV: "true"
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
@@ -18,10 +14,5 @@ concurrency:
 jobs:
   lint:
     name: Lint code
-    runs-on: ubuntu-20.04
-    if: "!startsWith(github.head_ref, 'chore/l10n')"
-    timeout-minutes: 60
-    steps:
-      - uses: mainio/gha-decidim-module/lint@main
-        with:
-          stylelint: true
+    uses: mainio/gha-decidim-module/.github/workflows/lint.yml@main
+    secrets: inherit
