--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,3 +16,6 @@ jobs:
     name: Lint code
     uses: mainio/gha-decidim-module/.github/workflows/lint.yml@main
     secrets: inherit
+    with:
+      eslint: true
+      stylelint: true
