--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.22.9",
     "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.22.5",
     "@decidim/dev": "^0.27.2",
     "@decidim/eslint-config": "^0.27.2",
     "@decidim/stylelint-config": "^0.27.2",
